src/objects/Outlet__c.object
<CustomObject>
    <description>Collects all the outlets information from the system.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outlet_Owner_Email__c</fullName>
        <label>Outlet Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q1_Income__c</fullName>
        <label>Q1 Income</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2_Income__c</fullName>
        <label>Q2 Income</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3_Income__c</fullName>
        <label>Q3 Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Shop__c</fullName>
        <label>Retail Shop Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Retail_Shop__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>Retail_Shop__c.State__c</field>
                <operation>equals</operation>
                <valueField>$Source.State__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Shop__c</referenceTo>
        <relationshipLabel>Outlets</relationshipLabel>
        <relationshipName>Outlets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <globalPicklist>State</globalPicklist>
        <label>State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Income__c</fullName>
        <label>Yearly Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Outlet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outlet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>